--- a/server/seed/widgetTemplateFiles/d3-bullet/main.html
+++ b/server/seed/widgetTemplateFiles/d3-bullet/main.html
@@ -1,3 +1,3 @@
 <!-- This is where your widget's html goes -->
-<div id=\"message\">This Is your robot talking</div>
-<div id=\"bullet\"></div>
+<div id="message">This Is your robot talking</div>
+<div id="bullet"></div>
